[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_dto"
version = "0.1.0"
description = "Async API client with DTO support and sensitive field warnings"
authors = [
  { name="James Hollon", email="james.hollon@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "dacite>=1.6"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
